@@ -1,6 +1,7 @@
 UNRELEASED  ts-klassen  <qrpc@su-shiki.com>
 
 	* VERSION: 0.2.0
+	Added q_vvx_bench for scenario-based synthesize benchmarking.
 	Added q_vvx_worker with dynamic speaker model loading and wake queue flow.
 	Updated super_simple_tts job routing for per-speaker queues.
 	Renamed super_simple_tts RPC to synthesize.
